--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <html>
-    <h1>Hello World!</h1>
+    <h1>Hello World from Gitpod!</h1>
 </html>
